# MISC

./: .gitignore  .gitmodules  MPC.py  pyproject.toml
A_matrix_calculation/: A.npy  A_matrix_calculation.py
BagDecoder/: BagDecoder.py  LICENSE  READme.md
MPC/: MPC.py  ThrustToRpm.py  control_inputs.npy  controller.py  controller_v2.py  plotter.py  state_trajectory.npy  teste.py
Path Planning/: .gitignore
Path Planning/2D/: .gitignore  Map.py  complete_code.py  initial_path.npy  main.py  map.npy  path_optimizer.py  rrt.py  sdf.npy  sdf2d.py  sdf_tester.ipynb  x_matrix.npy
Path Planning/2D/plots/1/: initial_path.npy  map.npy  sdf.npy
Path Planning/2D/plots/10/: initial_path.npy  (+2 more)
Path Planning/3D/: Map.py  RRT.py  SDF.py  ellipsoid.py  long_horizon_mpc.py  main.py  path_optimizer.py  pyproject.toml  rrt.py  simulator.py
Path Planning/Ellipsoid Optimization/: polytope_ellipsoid_optimization.py  polytope_ellipsoid_optimization_single.py
Path Planning/Ellipsoid Optimization/results/: batch_results_20250330_131739.json  traj_tol_1.0e-01_viol_1.0e-06_dual_1.0e-03.npz  traj_tol_1.0e-02_viol_1.0e-04_dual_1.0e-02.npz  traj_tol_1.0e-02_viol_1.0e-07_dual_1.0e-06.npz  traj_tol_1.0e-03_viol_1.0e-07_dual_1.0e-01.npz  traj_tol_1.0e-04_viol_1.0e-01_dual_1.0e-07.npz  traj_tol_1.0e-06_viol_1.0e-01_dual_1.0e-06.npz  traj_tol_1.0e-06_viol_1.0e-02_dual_1.0e-02.npz  traj_tol_1.0e-06_viol_1.0e-03_dual_1.0e-02.npz  traj_tol_1.0e-06_viol_1.0e-07_dual_1.0e-06.npz  traj_tol_1.0e-07_viol_1.0e-02_dual_1.0e-07.npz  traj_tol_1.0e-07_viol_1.0e-06_dual_1.0e-02.npz
Path Planning/RRT/: READme.md  RRT.py  RRTOptimization.py  main.py  rrt.py
Path Planning/SDF/: Map.py  main.py  path_optimizer.py  rrt.py  sdf.py  sdf2d.py
PathPlanning/: .gitattributes  .gitignore  LICENSE  READme.md  pyproject.toml
PathPlanning/2D/: .gitignore
PathPlanning/3D/: SDF.py  Simulator  ellipsoid.ipynb  path_optimizer.py
PathPlanning/Ellipsoid Optimization/: A_matrix.npy  drawing.py  polytope_ellipsoid_optimization.py
PathPlanning/Optimization Tests/Barrier Functions/: barrier_function_vs_soft_constraint.py
PathPlanning/PathPlanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
PathPlanning/RRT/: READme.md  __init__.py  map.pcd
PathPlanning/src/: environment.pcd
PathPlanning/src/2D/: Map.py  READme.md  main.py  path_optimizer.py  rrt.py  sdf2d.py
PathPlanning/src/3D/: .gitignore  Map.py  RRT.py  SDF.py  ellipsoid.py  ellipsoid_Optimizer.py  long_horizon_mpc.py  main.py  path_optimizer.py
PathPlanning/src/3D/RRT_With_Attitude/: rrt_with_attitude.py
PathPlanning/src/Ellipsoid Optimization/: polytope_ellipsoid_optimization_single.py  space_cobot.stl
PathPlanning/src/EllipsoidOptimization/: drawing.py  polytope_ellipsoid_optimization.py  polytope_ellipsoid_optimization_single.py
PathPlanning/src/Environment/: Environment.py  __init__.py
PathPlanning/src/MapCreation/: main.py
PathPlanning/src/PathPlanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
PathPlanning/src/RRT/: 2d_rrt.py  DataProcessing.py  Environment.py  MeshSampler.py  Obstacle.py  OptimizedTrajectory.html  RRT.py  RRTOptimization.py  RRTOptimizationInterface.py  Robot.py  __init__.py  complexMap.pcd  ellipsoidal_radius.npy  ellispoidSupportFunction.py  main.py  map.bt  map.ot  map.pcd  optimizedPath.pkl  path.pkl  payloadData.npz  teste.py  teste1.py
PathPlanning/src/RRTOptimization/: DataProcessing.py  Obstacle.py  RRTOptimization.py  Robot.py  __init__.py  main.py  optimizedPath.html  optimizedPath.pkl
RRTCxx/: CMakeLists.txt  pyproject.toml
RRTCxx/src/rrtcxx/: __init__.py  _core.cpp
Simulator/: AbstractModel.py  READme.md  Simulator.py  SpaceCobotModel.py  comparator.py  simulator.py
motor_calib/: CCW Torque_order_3_coeffs.npy  MotorCalibProcesser.py  MotorPosition.py  PWM vs Thrust_order_1_coeffs.npy  PWM vs Thrust_order_2_coeffs.npy  PWM vs Thrust_order_3_coeffs.npy  PWM vs Torque_order_1_coeffs.npy  PWM vs Torque_order_2_coeffs.npy  PWM vs Torque_order_3_coeffs.npy  RPM vs PWM_order_1_coeffs.npy  RPM vs PWM_order_2_coeffs.npy  RPM vs PWM_order_3_coeffs.npy  RPM vs Thrust_order_1_coeffs.npy  RPM vs Thrust_order_2_coeffs.npy  RPM vs Torque_order_1_coeffs.npy  RPM vs Torque_order_2_coeffs.npy  RPM vs Torque_order_3_coeffs.npy  StepsTestV2_2024-11-11_120057.csv  StepsTestV2_2024-11-11_121155.csv  StepsTestV2_2024-11-11_121650.csv  StepsTestV2_2024-11-11_121707.csv  StepsTestV2_2024-11-11_121751.csv
plotter/: plotter.py  real_data.py
simulator/: comparator.py  simulator.py
(+297 files in other folders)
