[build-system]
requires = ["scikit-build-core", "pybind11", "cmake"]
build-backend = "scikit_build_core.build"

[project]
name = "rrtcxx"
version = "0.1.0"
description = "RRT module in C++"
authors = [{ name = "Andre Teixeira", email = "andre.rebelo.teixeira@hotmail.com" }]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.4",
    "scikit-build>=0.18.1",
]

[tool.scikit-build]
wheel.packages = ["src/rrtcxx"]
