[project]
name = "3d"
version = "0.1.0"
description = "Trajectory planner for a 3D environemnt with static and moving obstacle avoidance"
readme = "README.md"
authors = [
    { name = "andre-rebelo-teixera", email = "andre.rebelo.teixeira@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "casadi>=3.6.7",
    "numpy>2.0",
    "pyvista>=0.44.2",
    "scipy>=1.15.2",
    "spatial-casadi>=1.1.0",
    "trimesh>=4.6.4",
]

